fix table overflows

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -14,6 +14,7 @@ body {
   color: $text-color;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
+  text-size-adjust: 100%;
   font-weight: 300;
   line-height: 1.5;
 }
